Fix horizontal scrollbars on mobile

--- a/style.css
+++ b/style.css
@@ -1280,7 +1280,7 @@ body.layout-single-column {
   .layout-single-column .columns-area__panels__main {
     order: 1;
     position: absolute;
-    width: 100%;
+    width: calc(100% - 4px);
   }
 
   .layout-single-column .status__info .status__display-name .display-name__account {
